--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "description": "KDex UI Components",
   "devDependencies": {
+    "typescript": "^5.7.3",
     "vite": "^5.0.0",
     "vite-plugin-external": "^4.3.1",
     "vitest": "^1.0.0"
