--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "description": "KDex UI Components",
   "devDependencies": {
     "vite": "^5.0.0",
+    "vite-plugin-external": "^4.3.1",
     "vitest": "^1.0.0"
+  },
+  "dependencies": {
+    "history": "^5.3.0"
   }
 }
