--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "typescript": "^5.7.3",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "^4.5.0",
     "vite-plugin-external": "^4.3.1",
     "vitest": "^1.0.0"
   },
