--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "description": "KDex UI Components",
   "devDependencies": {
+    "happy-dom": "^20.7.0",
     "typescript": "^5.7.3",
     "vite": "^7.2.2",
     "vite-plugin-dts": "^4.5.0",
