correct action path
Signed-off-by: Raymond Augé <rayauge@kdex.dev>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
 
     - name: Publish NPM Package
       if: ${{ env.PUBLISH == 'true' }}
-      uses: ./.github/actions/publish-npm-package/action.yml
+      uses: ./.github/actions/publish-npm-package
