--- a/.github/actions/publish-npm-package/action.yml
+++ b/.github/actions/publish-npm-package/action.yml
@@ -8,7 +8,8 @@ runs:
   - name: Log in to registry with NPM
     shell: bash
     run: |
-      echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" > .npmrc
+      echo "@kdex:registry=https://npm.pkg.github.com" > .npmrc
+      echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" >> .npmrc
 
   - name: Publish NPM package
     shell: bash
