--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
   },
   "dependencies": {
     "history": "^5.3.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kdex-tech/kdex-ui.git"
   }
 }
