make sure publish doesn't contain stale build files
Signed-off-by: Raymond Augé <rayauge@kdex.dev>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "prepublishOnly": "npm run build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest"
